# document-processor

./: .gitignore  README.md  pyproject.toml
docs/: api-reference.md  llm-editing-notes.md  opendataloader-pdf-line-art-experiment-plan.md  opendataloader-pdf-line-art-experiment-results.md  opendataloader-pdf-table-style-schema.md  pdf-parser-docir-integration.md  removed-legacy-annotation-api.md  removed-legacy-edit-api.md  usage-guide.md
docs/superpowers/plans/: 2026-04-16-pdf-logical-page-plan.md  2026-04-16-pdf-preview-module-refactor-plan.md  (+1 more)
scripts/: capture_pdf_review_screenshots.py  compare_pdf_review_pages_openai.py  compare_table_style_oracles.py  compare_text_fidelity_oracles.py  render_pdf_batch_demo.py  render_pdf_candidate_overlays.py  render_pdf_candidate_overlays_batch.py  render_pdf_primitive_overlays.py  render_pdf_review_batch.py  render_pdf_vlm_report.py
src/document_processor/: __init__.py  annotations.py  api.py  api_types.py  builder.py  diagram.py  edit_engine.py  env_utils.py  html_exporter.py  hwpx.py  io_utils.py  meta_render.py  models.py  render_prep.py  style_types.py
src/hwpx/: __init__.py
tests/: kr_demo.ipynb  manual_test.py  manual_test_all.py  manual_test_one.py  test_diagram.py  test_document_ir.py  test_editor_api.py  test_html_exporter.py  test_image_support.py  test_pdf_enrichment.py  test_pdf_odl_table_reconstruct.py  test_pdf_odl_table_split_plan.py  test_pdf_pipeline.py  test_pdf_preview.py  test_pdf_preview_module_api.py  test_pdf_table_split_enrichment.py  test_pdf_vlm_compare.py  test_style_extractor.py
(+46 files in other folders)
